chore: Use UID in trackedEntity exporter [DHIS2-17790]