@@ -58,7 +58,6 @@ import java.util.Collection;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -69,6 +68,7 @@ import org.hisp.dhis.category.CategoryOptionCombo;
 import org.hisp.dhis.common.AccessLevel;
 import org.hisp.dhis.common.AssignedUserQueryParam;
 import org.hisp.dhis.common.BaseIdentifiableObject;
+import org.hisp.dhis.common.CodeGenerator;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.QueryFilter;
 import org.hisp.dhis.common.QueryOperator;
@@ -188,9 +188,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
   private static List<String> uids(
       Collection<? extends BaseIdentifiableObject> identifiableObjects) {
-    return identifiableObjects.stream()
-        .map(BaseIdentifiableObject::getUid)
-        .collect(Collectors.toList());
+    return identifiableObjects.stream().map(BaseIdentifiableObject::getUid).toList();
   }
 
   @BeforeEach
@@ -561,8 +559,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
   void shouldReturnEmptyCollectionGivenUserHasNoAccessToTrackedEntityType() {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .organisationUnits(orgUnitA)
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     trackedEntityTypeA.getSharing().setPublicAccess(AccessStringHelper.DEFAULT);
@@ -583,9 +581,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid(), orgUnitB.getUid()))
+            .organisationUnits(orgUnitA, orgUnitB)
             .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     final List<TrackedEntity> trackedEntities =
@@ -604,15 +602,15 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .trackedEntityParams(TrackedEntityParams.TRUE)
             .build();
 
     TrackedEntity te =
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), programA.getUid(), TrackedEntityParams.TRUE);
+            UID.of(trackedEntityA), UID.of(programA), TrackedEntityParams.TRUE);
     assertEquals(1, te.getEnrollments().size());
     assertEquals(enrollmentA.getUid(), te.getEnrollments().stream().findFirst().get().getUid());
 
@@ -649,9 +647,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .programUid(programB.getUid())
+            .program(programB)
             .build();
 
     final List<TrackedEntity> trackedEntities =
@@ -668,9 +666,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .programUid(programA.getUid())
+            .program(programA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -691,7 +689,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntity trackedEntity =
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), programA.getUid(), TrackedEntityParams.TRUE);
+            UID.of(trackedEntityA), UID.of(programA), TrackedEntityParams.TRUE);
 
     assertContainsOnly(Set.of(enrollmentA), trackedEntity.getEnrollments());
   }
@@ -706,7 +704,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntity trackedEntity =
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), null, TrackedEntityParams.TRUE);
+            UID.of(trackedEntityA), null, TrackedEntityParams.TRUE);
 
     assertContainsOnly(
         Set.of(enrollmentA, enrollmentB, enrollmentProgramB), trackedEntity.getEnrollments());
@@ -717,10 +715,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .filters(Map.of(teaA.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "M'M"))))
+            .trackedEntityType(trackedEntityTypeA)
+            .filter(teaA, List.of(new QueryFilter(QueryOperator.EQ, "M'M")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -733,10 +731,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .filters(Map.of(teaA.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "A"))))
+            .trackedEntityType(trackedEntityTypeA)
+            .filter(teaA, List.of(new QueryFilter(QueryOperator.EQ, "A")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -751,9 +749,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedStartDate(oneHourBeforeLastUpdated)
             .build();
 
@@ -769,9 +767,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedStartDate(oneHourAfterLastUpdated)
             .build();
 
@@ -787,9 +785,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedEndDate(oneHourAfterLastUpdated)
             .build();
 
@@ -805,9 +803,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedEndDate(oneHourBeforeLastUpdated)
             .build();
 
@@ -823,8 +821,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programEnrollmentStartDate(oneHourBeforeEnrollmentDate)
             .build();
@@ -841,8 +839,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programEnrollmentStartDate(oneHourAfterEnrollmentDate)
             .build();
@@ -859,8 +857,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programEnrollmentEndDate(oneHourAfterEnrollmentDate)
             .build();
@@ -877,8 +875,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programEnrollmentEndDate(oneHourBeforeEnrollmentDate)
             .build();
@@ -895,8 +893,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programIncidentStartDate(oneHourBeforeIncidentDate)
             .build();
@@ -913,8 +911,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programIncidentStartDate(oneHourAfterIncidentDate)
             .build();
@@ -931,8 +929,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programIncidentEndDate(oneHourAfterIncidentDate)
             .build();
@@ -949,8 +947,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .programIncidentEndDate(oneHourBeforeIncidentDate)
             .build();
@@ -968,8 +966,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .eventStatus(EventStatus.ACTIVE)
             .eventStartDate(oneHourBeforeOccurredDate)
@@ -989,8 +987,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .eventStatus(EventStatus.ACTIVE)
             .eventStartDate(oneHourAfterOccurredDate)
@@ -1010,8 +1008,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .programUid(programA.getUid())
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .program(programA)
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
             .eventStatus(EventStatus.ACTIVE)
             .eventStartDate(twoHoursBeforeOccurredDate)
@@ -1028,10 +1026,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .filters(Map.of(teaA.getUid(), List.of(new QueryFilter(QueryOperator.EQ, "Z"))))
+            .trackedEntityType(trackedEntityTypeA)
+            .filter(teaA, List.of(new QueryFilter(QueryOperator.EQ, "Z")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1044,10 +1042,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid(), orgUnitB.getUid()))
+            .organisationUnits(orgUnitA, orgUnitB)
             .orgUnitMode(DESCENDANTS)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .filters(Map.of(teaA.getUid(), List.of()))
+            .trackedEntityType(trackedEntityTypeA)
+            .filter(teaA, List.of())
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1061,9 +1059,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedStartDate(Date.from(Instant.now().minus(1, ChronoUnit.DAYS)))
             .lastUpdatedEndDate(Date.from(Instant.now().plus(1, ChronoUnit.MINUTES)))
             .build();
@@ -1075,9 +1073,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     // Update last updated start date to today
     operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .lastUpdatedStartDate(Date.from(Instant.now().plus(1, ChronoUnit.DAYS)))
             .lastUpdatedEndDate(Date.from(Instant.now().plus(1, ChronoUnit.MINUTES)))
             .build();
@@ -1093,8 +1091,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParamsBuilder builder =
         TrackedEntityOperationParams.builder()
             .assignedUserQueryParam(new AssignedUserQueryParam(null, null, UID.of(user)))
-            .organisationUnits(Set.of(orgUnitA.getUid()))
-            .programUid(programA.getUid())
+            .organisationUnits(orgUnitA)
+            .program(programA)
             .eventStartDate(Date.from(Instant.now().minus(10, ChronoUnit.DAYS)))
             .eventEndDate(Date.from(Instant.now().plus(10, ChronoUnit.DAYS)));
 
@@ -1129,9 +1127,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .includeDeleted(true)
             .trackedEntityParams(TrackedEntityParams.TRUE)
             .build();
@@ -1185,8 +1183,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
     operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .organisationUnits(orgUnitA)
+            .trackedEntityType(trackedEntityTypeA)
             .includeDeleted(false)
             .trackedEntityParams(TrackedEntityParams.TRUE)
             .build();
@@ -1208,10 +1206,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(false, TRUE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntityType(trackedEntityTypeA)
+            .trackedEntities(trackedEntityA)
             .trackedEntityParams(params)
             .build();
 
@@ -1238,10 +1236,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntityType(trackedEntityTypeA)
+            .trackedEntities(trackedEntityA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1256,10 +1254,10 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(false, TRUE, true, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntityType(trackedEntityTypeA)
+            .trackedEntities(trackedEntityA)
             .trackedEntityParams(params)
             .build();
 
@@ -1287,9 +1285,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
         new TrackedEntityParams(false, TRUE.withIncludeEvents(false), false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .trackedEntityParams(params)
             .build();
 
@@ -1313,9 +1311,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     final Date currentTime = new Date();
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1344,9 +1342,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(false, TRUE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .trackedEntityParams(params)
             .build();
 
@@ -1388,9 +1386,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(false, TRUE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .trackedEntityType(trackedEntityTypeA)
             .trackedEntityParams(params)
             .build();
 
@@ -1440,9 +1438,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(true, FALSE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntities(trackedEntityA)
             .trackedEntityParams(params)
             .build();
 
@@ -1592,9 +1590,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(true, FALSE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntities(trackedEntityA)
             .trackedEntityParams(params)
             .build();
 
@@ -1618,9 +1616,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityParams params = new TrackedEntityParams(true, TRUE, false, false);
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
-            .organisationUnits(Set.of(orgUnitA.getUid()))
+            .organisationUnits(orgUnitA)
             .orgUnitMode(SELECTED)
-            .trackedEntityUids(Set.of(trackedEntityA.getUid()))
+            .trackedEntities(trackedEntityA)
             .trackedEntityParams(params)
             .build();
 
@@ -1646,8 +1644,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ALL)
-            .programUid(programA.getUid())
-            .filters(Map.of(teaC.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "C"))))
+            .program(programA)
+            .filter(teaC, List.of(new QueryFilter(QueryOperator.LIKE, "C")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1662,8 +1660,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ALL)
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
-            .filters(Map.of(teaA.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "A"))))
+            .trackedEntityType(trackedEntityTypeA)
+            .filter(teaA, List.of(new QueryFilter(QueryOperator.LIKE, "A")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1680,8 +1678,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(ALL)
-            .programUid(programB.getUid())
-            .filters(Map.of(teaA.getUid(), List.of(new QueryFilter(QueryOperator.LIKE, "A"))))
+            .program(programB)
+            .filter(teaA, List.of(new QueryFilter(QueryOperator.LIKE, "A")))
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1693,10 +1691,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
   void shouldFailWhenModeAllUserCanSearchEverywhereButNotSuperuserAndNoAccessToProgram() {
     injectSecurityContextUser(userWithSearchInAllAuthority);
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder()
-            .orgUnitMode(ALL)
-            .programUid(programC.getUid())
-            .build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ALL).program(programC).build();
 
     ForbiddenException ex =
         assertThrows(
@@ -1713,8 +1708,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(CHILDREN)
-            .organisationUnits(Set.of(orgUnitA.getUid()))
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .organisationUnits(orgUnitA)
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1728,8 +1723,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(CHILDREN)
-            .organisationUnits(Set.of(orgUnitChildA.getUid()))
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .organisationUnits(orgUnitChildA)
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1745,8 +1740,8 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     TrackedEntityOperationParams operationParams =
         TrackedEntityOperationParams.builder()
             .orgUnitMode(CHILDREN)
-            .organisationUnits(Set.of(orgUnitA.getUid(), orgUnitChildA.getUid()))
-            .trackedEntityTypeUid(trackedEntityTypeA.getUid())
+            .organisationUnits(orgUnitA, orgUnitChildA)
+            .trackedEntityType(trackedEntityTypeA)
             .build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
@@ -1763,10 +1758,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, BadRequestException, NotFoundException {
     injectSecurityContextUser(superuser);
     TrackedEntityOperationParams operationParams =
-        TrackedEntityOperationParams.builder()
-            .orgUnitMode(ALL)
-            .programUid(programA.getUid())
-            .build();
+        TrackedEntityOperationParams.builder().orgUnitMode(ALL).program(programA).build();
 
     List<TrackedEntity> trackedEntities = trackedEntityService.getTrackedEntities(operationParams);
     assertContainsOnly(Set.of(trackedEntityA.getUid()), uids(trackedEntities));
@@ -1780,7 +1772,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             NotFoundException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), programUid, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), UID.of(programUid), TrackedEntityParams.TRUE));
     assertEquals(
         String.format("Program with id %s could not be found.", programUid),
         exception.getMessage());
@@ -1788,15 +1780,15 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
 
   @Test
   void shouldFailWhenRequestingSingleTEAndProvidedTEDoesNotExist() {
-    String trackedEntityUid = "made up tracked entity";
+    String notExistentTE = CodeGenerator.generateUid();
     NotFoundException exception =
         assertThrows(
             NotFoundException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityUid, programA.getUid(), TrackedEntityParams.TRUE));
+                    UID.of(notExistentTE), UID.of(programA), TrackedEntityParams.TRUE));
     assertEquals(
-        String.format("TrackedEntity with id %s could not be found.", trackedEntityUid),
+        String.format("TrackedEntity with id %s could not be found.", notExistentTE),
         exception.getMessage());
   }
 
@@ -1814,9 +1806,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(),
-                    inaccessibleProgram.getUid(),
-                    TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), UID.of(inaccessibleProgram), TrackedEntityParams.TRUE));
     assertContains(
         String.format("User has no data read access to program: %s", inaccessibleProgram.getUid()),
         exception.getMessage());
@@ -1836,7 +1826,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntity.getUid(), programA.getUid(), TrackedEntityParams.TRUE));
+                    UID.of(trackedEntity), UID.of(programA), TrackedEntityParams.TRUE));
     assertContains(
         String.format(
             "User has no data read access to tracked entity type: %s",
@@ -1857,7 +1847,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), null, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), null, TrackedEntityParams.TRUE));
     assertContains(
         String.format("User has no access to TrackedEntity:%s", trackedEntityA.getUid()),
         exception.getMessage());
@@ -1878,7 +1868,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), null, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), null, TrackedEntityParams.TRUE));
 
     assertContains(
         String.format("User has no access to TrackedEntity:%s", trackedEntityA.getUid()),
@@ -1903,7 +1893,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), null, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), null, TrackedEntityParams.TRUE));
 
     assertContains(
         String.format("User has no access to TrackedEntity:%s", trackedEntityA.getUid()),
@@ -1923,7 +1913,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), null, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), null, TrackedEntityParams.TRUE));
 
     assertContains(
         String.format("User has no access to TrackedEntity:%s", trackedEntityA.getUid()),
@@ -1942,7 +1932,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
             ForbiddenException.class,
             () ->
                 trackedEntityService.getTrackedEntity(
-                    trackedEntityA.getUid(), null, TrackedEntityParams.TRUE));
+                    UID.of(trackedEntityA), null, TrackedEntityParams.TRUE));
 
     assertEquals(
         String.format("User has no access to TrackedEntity:%s", trackedEntityA.getUid()),
@@ -1954,7 +1944,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntity trackedEntity =
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), programA.getUid(), TrackedEntityParams.TRUE);
+            UID.of(trackedEntityA), UID.of(programA), TrackedEntityParams.TRUE);
 
     assertContainsOnly(
         Set.of(
@@ -1969,7 +1959,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
       throws ForbiddenException, NotFoundException, BadRequestException {
     TrackedEntity trackedEntity =
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), null, TrackedEntityParams.TRUE);
+            UID.of(trackedEntityA), null, TrackedEntityParams.TRUE);
 
     assertContainsOnly(
         Set.of(trackedEntityAttributeValueA, trackedEntityAttributeValueB),
@@ -1993,7 +1983,7 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
     assertEquals(
         trackedEntityA,
         trackedEntityService.getTrackedEntity(
-            trackedEntityA.getUid(), programA.getUid(), TrackedEntityParams.TRUE));
+            UID.of(trackedEntityA), UID.of(programA), TrackedEntityParams.TRUE));
   }
 
   private Set<String> attributeNames(final Collection<TrackedEntityAttributeValue> attributes) {
@@ -2037,9 +2027,9 @@ class TrackedEntityServiceTest extends PostgresIntegrationTestBase {
   private TrackedEntityOperationParams createOperationParams(
       OrganisationUnit orgUnit, TrackedEntity trackedEntity) {
     return TrackedEntityOperationParams.builder()
-        .organisationUnits(Set.of(orgUnit.getUid()))
+        .organisationUnits(orgUnit)
         .orgUnitMode(SELECTED)
-        .trackedEntityUids(Set.of(trackedEntity.getUid()))
+        .trackedEntities(trackedEntity)
         .trackedEntityParams(new TrackedEntityParams(true, TRUE, false, false))
         .build();
   }
